Closing more resources as they are used